--- a/404.md
+++ b/404.md
@@ -4,6 +4,6 @@ title: Página não encontrada
 permalink: /404.html
 ---
 
-# 404 
+<h2 class="text-center">404</h2>
 
-## página não encontrada
+<h3 class="text-center">página não encontrada</h3>
